--- a/my_first_dbt_project/profiles.yml
+++ b/my_first_dbt_project/profiles.yml
@@ -1,35 +1,73 @@
-my_first_dbt_project:
+# my_first_dbt_project:
+#   target: dev
+#   outputs:
+#     dev:
+#       account: aadehamid
+#       database: dbt_learning
+#       password: SnowflakeAboki11
+#       role: ACCOUNTADMIN
+#       schema: CORE
+#       threads: 8
+#       type: snowflake
+#       user: aadehamid
+#       warehouse: dbt
+
+#     prod:
+#       account: YOUR_ACCOUNT_HERE
+#       database: analytics
+#       password: YOUR_PASSWORD_HERE
+#       role: dbt_transformer
+#       schema: public
+#       threads: 8
+#       type: snowflake
+#       user: YOUR_USER_HERE
+#       warehouse: dbt
+
+#     ci:
+#       account: YOUR_ACCOUNT_HERE
+#       database: analytics_{{ env_var('DBT_PR_NUMBER')}}
+#       password: YOUR_PASSWORD_HERE
+#       role: dbt_transformer
+#       schema: public
+#       threads: 8
+#       type: snowflake
+#       user: YOUR_USER_HERE
+#       warehouse: dbt
+#================================================================
+ my_first_dbt_project:
   target: dev
   outputs:
     dev:
-      account: YOUR_ACCOUNT_HERE
-      database: dbt_learning
-      password: YOUR_PASSWORD_HERE
-      role: dbt_transformer
-      schema: YOUR_NAME_HERE
-      threads: 8
-      type: snowflake
-      user: YOUR_USER_HERE
-      warehouse: dbt
-
-    prod:
-      account: YOUR_ACCOUNT_HERE
-      database: analytics
-      password: YOUR_PASSWORD_HERE
-      role: dbt_transformer
+      type: postgres
+      host: localhost
+      user: dbt
+      password: dbt
+      port: 5432
+      dbname: dbt # or database instead of dbname
       schema: public
-      threads: 8
-      type: snowflake
-      user: YOUR_USER_HERE
-      warehouse: dbt
-
+      threads: 4
+      # [keepalives_idle](#keepalives_idle): 0 # default 0, indicating the system default. See below
+      # connect_timeout: 10 # default 10 seconds
+      # [retries](#retries): 1  # default 1 retry on error/timeout when opening connections
     ci:
-      account: YOUR_ACCOUNT_HERE
-      database: analytics_{{ env_var('DBT_PR_NUMBER')}}
-      password: YOUR_PASSWORD_HERE
-      role: dbt_transformer
+      type: postgres
+      threads: 4
+      host: localhost
+      port: 5432
+      user: ci_user
+      pass: ci_dbt
+      dbname: ci_db
       schema: public
-      threads: 8
-      type: snowflake
-      user: YOUR_USER_HERE
-      warehouse: dbt
+      keepalives_idle: 200
+      retries: 3
+    prod:
+      type: postgres
+      threads: 4
+      host: localhost
+      port: 5432
+      user: prod_user
+      pass: prod_dbt
+      dbname: prod_db
+      schema: public
+      keepalives_idle: 200
+      retries: 3
